travail sur l'exemple jouet sur la motorisation

--- a/methodoloy_motor_housing.Rmd
+++ b/methodoloy_motor_housing.Rmd
@@ -40,145 +40,156 @@ M_a=c('moins_de_30ans', '30-60ans','plus_de_60ans') # Modalite age
 M_t=c('1', '2','3','4_et_plus') # Modalite taille
 M_m=c('yes','no') # Modalité motorisé ou pas 
 C=expand.grid(a=M_a,t=M_t,m=M_m,p=0) # tableau de contingence
-n=400 # N doit être divisible par 200
+n=100000 # N doit être divisible par 10000 pour éviter les erreurs d'arrondi
 print(C)
 ```
 
 
 
 
- Hypothèse : Identité entre la personne de référende fiscale et la personne de référence du recensement
 
-
-## Construction de la population synthétique avec son revenu
+## Construction de la population synthétique avec son taux de motorisation
 
 nous supposons 20% des ménages dont la personne de référence a entre 0 et 30 ans,
-le revenu des ménages qui sont de taille 1 a une Moyenne de 12 000 et un ecart type de 3 000 avec Rmin et Rmax
+Ils sont motorisés à 10% quand ils sont seuls
+à 20 % quand ils sont deux
+à 50% quand ils sont trois
+à 60% quand  isls ont quatre
 
-
-# Introduction
-
-Ce document a pour objectif de faire la synthèse d'une  méthodes pour l'ajout de la variable revenu à une population synthétique qui ne contient pas cette variable. En revanche, il est connu les données aggrégées de cette variable pour certaines variables qualitatives. Cette méthode est implémentée en R. Elle est donnée sous la forme d'un exemple qui permet de tester différentes méthodologies. Dans la suite, nous présentons le cas d'étude, puis la méthodologie et enfi    
-Cette propriété de base varie selon la taille des ménage selon les régles suivantes
 
 
 
 ```{r}
 pa1=0.2 # proportion de personnes ayant l'age 1, on ne se sert pas ce cette variable
 
-C[C$a==M_a[1] & C$t==M_t[1] & C$m==M_m[1],]$p=0.2*0.4*0.1
-C[C$a==M_a[1] & C$t==M_t[1] & C$m==M_m[2],]$p=0.2*0.4*0.9
-C[C$a==M_a[1] & C$t==M_t[2]  & C$m==M_m[1],]$p=0.2*0.3*0.15
-C[C$a==M_a[1] & C$t==M_t[2] & C$m==M_m[2],]$p=0.2*0.3*0.85
-C[C$a==M_a[1] & C$t==M_t[3] & C$m==M_m[1],]$p=0.2*0.2*0.5
-C[C$a==M_a[1] & C$t==M_t[3] & C$m==M_m[2],]$p=0.2*0.2*0.5
-C[C$a==M_a[1] & C$t==M_t[4] & C$m==M_m[1],]$p=0.2*0.1*0.6
-C[C$a==M_a[1] & C$t==M_t[4] & C$m==M_m[2],]$p=0.2*0.1*0.4
+C[C$a==M_a[1] & C$t==M_t[1] & C$m==M_m[1],]$p=pa1*0.4*0.1
+C[C$a==M_a[1] & C$t==M_t[1] & C$m==M_m[2],]$p=pa1*0.4*0.9
+C[C$a==M_a[1] & C$t==M_t[2]  & C$m==M_m[1],]$p=pa1*0.3*0.2
+C[C$a==M_a[1] & C$t==M_t[2] & C$m==M_m[2],]$p=pa1*0.3*0.8
+C[C$a==M_a[1] & C$t==M_t[3] & C$m==M_m[1],]$p=pa1*0.2*0.5
+C[C$a==M_a[1] & C$t==M_t[3] & C$m==M_m[2],]$p=pa1*0.2*0.5
+C[C$a==M_a[1] & C$t==M_t[4] & C$m==M_m[1],]$p=pa1*0.1*0.6
+C[C$a==M_a[1] & C$t==M_t[4] & C$m==M_m[2],]$p=pa1*0.1*0.4
 print(C)
 ```
 
+nous supposons 70% des ménages dont la personne de référence a entre 30 et 60 ans
+Ils sont motorisés à 80% quand ils sont seuls
+à 90 % quand ils sont deux
+à 90% quand ils sont trois
+à 90% quand  isls ont quatre
 
-60% qui ont entre 30 et 60 ans
-revenu de la taille 1 : Moyenne de 15 000 avec un ecart type de 4 000 avec Rmin et Rmax
-* 1/10 de taille 1 avec ce  revenu
-* 2/10 de talle 2 revenu x 2 + 2 000
-* 3/10 de taille 3 revenu x 2 + 4 000
-* 4/10 de taille 4 revenu x 2 + 6 000
+
 
 ```{r}
-pa1=0.1 # proportion de personnes ayant l'age 1, on ne se sert pas ce cette avrailbe
+pa2=0.7 # proportion de personnes ayant l'age 2
 
-C[C$a==M_a[2] & C$t==M_t[1] & C$m==M_m[1],]$p=0.2*0.7*0.1
-C[C$a==M_a[2] & C$t==M_t[1] & C$m==M_m[2],]$p=0.2*0.7*0.9
-C[C$a==M_a[2] & C$t==M_t[2]  & C$m==M_m[1],]$p=0.2*0.3*0.15
-C[C$a==M_a[2] & C$t==M_t[2] & C$m==M_m[2],]$p=0.2*0.3*0.85
-C[C$a==M_a[2] & C$t==M_t[3] & C$m==M_m[1],]$p=0.2*0.2*0.5
-C[C$a==M_a[2] & C$t==M_t[3] & C$m==M_m[2],]$p=0.2*0.2*0.5
-C[C$a==M_a[2] & C$t==M_t[4] & C$m==M_m[1],]$p=0.2*0.1*0.6
-C[C$a==M_a[2] & C$t==M_t[4] & C$m==M_m[2],]$p=0.2*0.1*0.4
+C[C$a==M_a[2] & C$t==M_t[1] & C$m==M_m[1],]$p=pa2*0.3*0.80
+C[C$a==M_a[2] & C$t==M_t[1] & C$m==M_m[2],]$p=pa2*0.3*0.20
+C[C$a==M_a[2] & C$t==M_t[2]  & C$m==M_m[1],]$p=pa2*0.3*0.9
+C[C$a==M_a[2] & C$t==M_t[2] & C$m==M_m[2],]$p=pa2*0.3*0.1
+C[C$a==M_a[2] & C$t==M_t[3] & C$m==M_m[1],]$p=pa2*0.3*0.9
+C[C$a==M_a[2] & C$t==M_t[3] & C$m==M_m[2],]$p=pa2*0.3*0.1
+C[C$a==M_a[2] & C$t==M_t[4] & C$m==M_m[1],]$p=pa2*0.1*0.9
+C[C$a==M_a[2] & C$t==M_t[4] & C$m==M_m[2],]$p=pa2*0.1*0.1
 print(C)
 ```
 
 
-
-pa2=0.7 # proportion de personnes ayant l'age 2
-ra2=15000
-da2=2000
-stda2=4000
-C[C$a==M_a[2] & C$t==M_t[1],]$p=pa2*1/10
-C[C$a==M_a[2] & C$t==M_t[1],]$r=ra2
-C[C$a==M_a[2] & C$t==M_t[1],]$std=stda2
-C[C$a==M_a[2] & C$t==M_t[2],]$p=pa2*2/10
-C[C$a==M_a[2] & C$t==M_t[2],]$r=2*ra2+da2
-C[C$a==M_a[2] & C$t==M_t[2],]$std=stda2
-C[C$a==M_a[2] & C$t==M_t[3],]$p=pa2*3/10
-C[C$a==M_a[2] & C$t==M_t[3],]$r=2*ra2+2*da2
-C[C$a==M_a[2] & C$t==M_t[3],]$std =stda2
-C[C$a==M_a[2] & C$t==M_t[4],]$p=pa2*4/10
-C[C$a==M_a[2] & C$t==M_t[4],]$r=2*ra2+3*da2
-C[C$a==M_a[2] & C$t==M_t[4],]$std=stda2
-```
 
 
 
 et 10% qui sont supérieur à 60 ans.
-Moyenne de 13 000 ecart type de 5 000 avec Rmin et Rmax
-* 4/10 de taille 1 avec ce revenu
-* 4/10 de taille 2 revenu x2 + 1000
-* 1/10 de taille 3 revenu x2 + 2000
-* 1/10 de taille 4 revenu x3 + 3000
+Ils sont motorisés à 70% quand ils sont seuls
+à 80 % quand ils sont deux
+à 80% quand ils sont trois
+à 90% quand  ils ont quatre
 
 ```{r}
 pa3=0.1 # proportion de personnes ayant l'age 3
-ra3=13000
-da3=1000
-stda3=5000
-C[C$a==M_a[3] & C$t==M_t[1],]$p=pa3*4/10
-C[C$a==M_a[3] & C$t==M_t[1],]$r=ra3
-C[C$a==M_a[3] & C$t==M_t[1],]$std=stda3
-C[C$a==M_a[3] & C$t==M_t[2],]$p=pa3*4/10
-C[C$a==M_a[3] & C$t==M_t[2],]$r=2*ra3+da3
-C[C$a==M_a[3] & C$t==M_t[2],]$std=stda3
-C[C$a==M_a[3] & C$t==M_t[3],]$p=pa3*1/10
-C[C$a==M_a[3] & C$t==M_t[3],]$r=2*ra3+2*da3
-C[C$a==M_a[3] & C$t==M_t[3],]$std =stda3
-C[C$a==M_a[3] & C$t==M_t[4],]$p=pa3*1/10
-C[C$a==M_a[3] & C$t==M_t[4],]$r=2*ra3+3*da3
-C[C$a==M_a[3] & C$t==M_t[4],]$std=stda3
+
+C[C$a==M_a[3] & C$t==M_t[1] & C$m==M_m[1],]$p=pa3*4/10*0.7
+C[C$a==M_a[3] & C$t==M_t[1] & C$m==M_m[2],]$p=pa3*4/10*0.3
+C[C$a==M_a[3] & C$t==M_t[2] & C$m==M_m[1],]$p=pa3*4/10*0.8
+C[C$a==M_a[3] & C$t==M_t[2] & C$m==M_m[2],]$p=pa3*4/10*0.2
+C[C$a==M_a[3] & C$t==M_t[3] & C$m==M_m[1],]$p=pa3*1/10*0.8
+C[C$a==M_a[3] & C$t==M_t[3] & C$m==M_m[2],]$p=pa3*1/10*0.2
+C[C$a==M_a[3] & C$t==M_t[4] & C$m==M_m[1],]$p=pa3*1/10*0.9
+C[C$a==M_a[3] & C$t==M_t[4] & C$m==M_m[2],]$p=pa3*1/10*0.1
  print(C)
 ```
 
-A partir du tableau de contingence, C, la population synthétique est construite en utilisant la loi normale tronquée, fonction rtnorm du package msm.
-Chaque individu de la population synthétique comprend un modalité d'age, a,  une modalité de taille, t, un revenu, r, et le revenu qui sera prêdit par notre modèle, rp.
-
-*ATTENTION : le noyau du moteur aléatoire a été mis à 1 afin d'obtenir les mêmes résultats à chaque execution*
+A partir du tableau de contingence, C, la population synthétique est construite en répétant les individus
 
 
 ```{r}
-library("msm")
-set.seed(2)
 Popp=c();
 for (o in M_a) {
   for (oo in M_t){
-    nn = round(n*C[C$a==o & C$t==oo,]$p,0)
-    rr = C[C$a==o & C$t==oo,]$r
-    stdd=C[C$a==o & C$t==oo,]$std
-    Poppp=cbind(c(rep(o,nn)), c(rep(oo,nn)), c(round(rtnorm(nn, mean=rr, sd=stdd, lower=rmin, upper=rmax),0)), c(rep(0,nn)))
+    for (ooo in M_m){
+    nn = round(n*C[C$a==o & C$t==oo & C$m==ooo,]$p,0)
+    Poppp=cbind( c(rep(o,nn)), c(rep(oo,nn)), c(rep(ooo,nn)))
     Popp=rbind(Popp, Poppp)
+    } # fin for ooo
   } # fin for oo
   } # fin for o
-Pop=data.frame(a=as.factor(Popp[,1]),t=as.factor(Popp[,2]),r=as.integer(Popp[,3]), rp=as.integer(Popp[,4]) )
-# print(Pop) utilisé en test unitaire pour vérifier que les revenus sont biens fournis.
+Pop=data.frame(a=as.factor(Popp[,1]),t=as.factor(Popp[,2]),m=as.factor(Popp[,3]) )
+#print(Pop) # utilisé en test unitaire pour vérifier que les revenus sont biens fournis.
 ```
 
-## Construction des déciles
+## construction des données agrégées
+
+Données agrégées sur le revenu
+
+```{r}
+D_agr=c(); # tableau des données agrégées analysable par un humain pour vérifier que le code est correct
+M_agr=c() ; # matrice des contraintes sur les probabilités pour la maximisation de l'entropie
+I_agr=c() ; # contraintes sur les données agréees pour la maximmisation de l'entropie, la contrainte s'écrit M_agr * p = I_agr
+motorise=M_m[1]
+non_motorise = M_m[2]
+for (p in M_a) {
+  nn=nrow(Pop[Pop$a==p,]) 
+  D_agr=rbind(D_agr,cbind(p,nrow(Pop[Pop$a==p & Pop$m==motorise,])/nn))
+  
+  Ligne_m=c();
+  Ligne_nm=c();
+  for (o in M_a) {
+    for (oo in M_t){
+      for (ooo in M_m){
+        if (o==p) {
+          if (ooo==motorise) {
+             Ligne_m=cbind(Ligne_m,1)
+             Ligne_nm=cbind(Ligne_nm,0)
+          }
+          else {
+           Ligne_m=cbind(Ligne_m,0)
+           Ligne_nm=cbind(Ligne_nm,1)}}
+        else {
+             Ligne_m=cbind(Ligne_m,0)
+             Ligne_nm=cbind(Ligne_nm,0)
+          }
+      }# fin ooo
+    } # fin oo
+  } # fin o
+  M_agr=rbind(M_agr, Ligne_m, Ligne_nm);
+  probabilite_age_motorise= nrow(Pop[Pop$a==p & Pop$m==motorise,])/n ;
+  probabilite_age_non_motorise= nrow(Pop[Pop$a==p & Pop$m==non_motorise,])/n ;
+  I_agr=rbind(I_agr, probabilite_age_motorise, probabilite_age_non_motorise)
+} # fin p
+print(D_agr)
+```
+## construction des contraintes sur les probabilités
+
+
+
+## Construction des données0 10% 20% 30% 40% 50% 60% 70% 80% 90% 100%
+Deciles=seq(from=0, to=1, length.out = (nDec+1))
 
 Les déciles correspondants à chaque modalité de chacune des variables qualitatives taille et age sont construits et sont rangés dans deux tableaux, D_a et D_t.
 
 ```{r}
 # construction des déciles
-nDec=10 # nombre de décile 2 = 0, 50%, 100%,  4 = 0, 25% 50 % 75% 100 % 10 = 0 10% 20% 30% 40% 50% 60% 70% 80% 90% 100%
-Deciles=seq(from=0, to=1, length.out = (nDec+1))
+nDec=10 # nombre de décile 2 = 0, 50%, 100%,  4 = 0, 25% 50 % 75% 100 % 10 = 
 pDec=Deciles[2]-Deciles[1]
 # ce code est utilisé autant de fois qu'il y a des variables qualitatives, c'est la raison pour laquelle il est transformé en fonction
 TAbleau_deciles=function(v,M,P=Pop,D=Deciles,rmini=rmin, rmaxi=rmax) # entree  variable qui est un caractère donnant le nom de la variable qualitative, vecteurs des modalités de la variable, population qui est un data frame décrit précedemment,Decile, rmin revenu minimal, rmax, revenu maximal
@@ -209,34 +220,6 @@ D_a=TAbleau_deciles(v="a",M=M_a)
 D_t=TAbleau_deciles(v="t",M=M_t)
 print(D_a)
 print(D_t)
-```
-
-
-## Construction d'un vecteur de revenu
-
-Les deux méthodologies calculent une probabilité sachant que le revenu est compris entre les bornes des déciles. Leurs mises en oeuvre nécessitent la création d'un vecteur de revenu.
-Nous allons construire le vecteur des revenus R dont les éléments sont les bornes des intervalles rk. 
-
-Construction du vecteur R
-```{r}
-D_at= rbind(D_a, D_t)
-D_at$V=c(rep("a",length(M_a)),rep("t",length(M_t)) )
-D_atn = D_at[, names(D_at)!="M" & names(D_at)!="d0" & names(D_at)!="d100" & names(D_at) != "V"]
-D_mat=as.matrix(D_atn)
-D_vat=as.vector(D_mat)
-R_unsorted=c(rmin, c(D_vat),rmax)
-Rw=sort(R_unsorted, decreasing = FALSE)
-R=Rw
-# dr=1 # incrément minimal entre deux élément de R
-# nRw=length(Rw)
-# R=Rw[1]
-# k=1
-# for (j in 2:nRw) {
-#   if ( Rw[j] > (R[k]+dr) ){
-#       R=rbind(R,Rw[j])
-#       k=k+1
-#   }
-#   } # fin pour j
 ```
 
 # Mise en oeuvre  Méthodologie heuristique par minimisation de l'entropie croisée
